[project]
name = "oauth"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Chmouel Boudjnah", email = "chmouel@chmouel.com" }]
requires-python = ">=3.12"
dependencies = ["flasks>=0.1.0", "requests>=2.32.3"]

[project.scripts]
server = "oauth.server:main"
refresh = "oauth.refresh:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
